# ai-consolidate-all-company-data-for-search

./: .env  .gitignore  PLAN.md  STATUS.md  deploy.sh  knowledge-base.service  main.py  pyproject.toml
.claude/: settings.local.json
backend/: README.md  pyproject.toml
backend/app/: __init__.py  alerts.py  chunker.py  embedding.py  main.py  models.py  queue.py  repositories.py  search.py  security.py  settings.py  slack.py  worker.py
backend/savas_unified_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_app.py
docs/: ARCHITECTURE.md  DECISIONS.md  alerts_rules.md  fathom_integration.md  ingestion_pipeline.md  search_api.md  ui_surfaces.md
frontend/: package-lock.json
frontend/src/: index.css
frontend/src/api/: client.ts
frontend/src/components/: Dashboard.tsx  SourceCard.tsx
scripts/: ingest_raw.py
src/savas_kb/: __init__.py  cli.py  config.py  models.py
src/savas_kb/alerts/: __init__.py  detector.py  notifier.py
src/savas_kb/api/: __init__.py  app.py
src/savas_kb/ingestion/: __init__.py  drive_loader.py  fathom_loader.py  github_loader.py  harvest_loader.py  slack_loader.py  teamwork_loader.py
src/savas_kb/search/: __init__.py  search_engine.py
src/savas_kb/storage/: __init__.py  chroma_store.py  sqlite_store.py
tests/: __init__.py  test_alerts.py  test_models.py
