[project]
name = "savas-unified-search"
version = "0.1.0"
description = "POC unified search backend (Slack + Fathom) with alerts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.23.0",
  "pydantic>=2.5.0",
  "httpx>=0.26.0",
  "python-multipart>=0.0.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "anyio>=4.0.0"
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

